Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignNumObjBooleanWrapped.quorum
class main
    action main
        Number num = "true"
    end
end